--- a/app/globals.css
+++ b/app/globals.css
@@ -69,12 +69,12 @@
 
   --color-background: #0f1115;
   --color-surface: #233357;
-  --color-primary: #2F7C46;
+  --color-primary: #04B305;
   --color-secondary: #1a1d24;
   --color-text: #e2e8f0;
   --color-accent: #38bdf8;
   --color-danger: #ef4444;
-  --color-success: #22c55e;
+  --color-success: #04B305;
 }
 
 @layer base {
@@ -108,5 +108,5 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #2F7C46;
+  background: #04B305;
 }
